--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,62 @@
 version: 2
 
 jobs:
-  build:
+  click-6.7-python2.7:
     working_directory: ~/test
     machine: true
-    branches:
-      ignore:
-        - /.*/
+    environment:
+      - FOLDER: "click-6.7-python2.7"
     steps:
+      - checkout
       - run:
-          # The Circle-CI build should not be active, but if this is not true for some reason, do a fast finish.
-          command: exit 0
+          name: Fast finish outdated PRs and merge PRs
+          command: |
+            ./ci_support/fast_finish_ci_pr_build.sh
+            ./ci_support/checkout_merge_commit.sh
+      - run:
+          command: docker pull condaforge/linux-anvil
+      - run:
+          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
+          command: ./ci_support/run_docker_build.sh
+  click-6.7-python3.5:
+    working_directory: ~/test
+    machine: true
+    environment:
+      - FOLDER: "click-6.7-python3.5"
+    steps:
+      - checkout
+      - run:
+          name: Fast finish outdated PRs and merge PRs
+          command: |
+            ./ci_support/fast_finish_ci_pr_build.sh
+            ./ci_support/checkout_merge_commit.sh
+      - run:
+          command: docker pull condaforge/linux-anvil
+      - run:
+          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
+          command: ./ci_support/run_docker_build.sh
+  click-6.7-python3.6:
+    working_directory: ~/test
+    machine: true
+    environment:
+      - FOLDER: "click-6.7-python3.6"
+    steps:
+      - checkout
+      - run:
+          name: Fast finish outdated PRs and merge PRs
+          command: |
+            ./ci_support/fast_finish_ci_pr_build.sh
+            ./ci_support/checkout_merge_commit.sh
+      - run:
+          command: docker pull condaforge/linux-anvil
+      - run:
+          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
+          command: ./ci_support/run_docker_build.sh
 
 workflows:
   version: 2
   build_and_test:
     jobs:
-      - build:
-          filters:
-            branches:
-              ignore:
-                - /.*/
+      - click-6.7-python2.7
+      - click-6.7-python3.5
+      - click-6.7-python3.6
