--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,12 @@ environment:
   
     - FOLDER: click-6.7-python3.6
   
+    - FOLDER: click-6.7-python2.7target-win-32
+  
+    - FOLDER: click-6.7-python3.5target-win-32
+  
+    - FOLDER: click-6.7-python3.6target-win-32
+  
 
 # We always use a 64-bit machine, but can build x86 distributions
 # with the TARGET_ARCH variable.
@@ -53,6 +59,6 @@ install:
 build: off
 
 test_script:
-    - conda build appveyor\%FOLDER% --quiet
+    - conda build recipe -m appveyor/%FOLDER%/conda_build_config.yaml --quiet
 deploy_script:
     - cmd: upload_or_check_non_existence .\recipe conda-forge --channel=main
