--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,6 +57,6 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - click-6.7-python2.7
-      - click-6.7-python3.5
-      - click-6.7-python3.6
+      - build_click-6.7-python2.7
+      - build_click-6.7-python3.5
+      - build_click-6.7-python3.6
