--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,11 @@
 version: 2
 
 jobs:
-  build_click-6.7-python2.7:
+  build_python2.7:
     working_directory: ~/test
     machine: true
     environment:
-      - FOLDER: "click-6.7-python2.7"
+      - FOLDER: "python2.7"
     steps:
       - checkout
       - run:
@@ -18,11 +18,11 @@ jobs:
       - run:
           # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
           command: ./ci_support/run_docker_build.sh
-  build_click-6.7-python3.5:
+  build_python3.5:
     working_directory: ~/test
     machine: true
     environment:
-      - FOLDER: "click-6.7-python3.5"
+      - FOLDER: "python3.5"
     steps:
       - checkout
       - run:
@@ -35,11 +35,11 @@ jobs:
       - run:
           # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
           command: ./ci_support/run_docker_build.sh
-  build_click-6.7-python3.6:
+  build_python3.6:
     working_directory: ~/test
     machine: true
     environment:
-      - FOLDER: "click-6.7-python3.6"
+      - FOLDER: "python3.6"
     steps:
       - checkout
       - run:
@@ -57,6 +57,6 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - build_click-6.7-python2.7
-      - build_click-6.7-python3.5
-      - build_click-6.7-python3.6
+      - build_python2.7
+      - build_python3.5
+      - build_python3.6
