--- a/appveyor/python2.7/conda_build_config.yaml
+++ b/appveyor/python2.7/conda_build_config.yaml
@@ -1,5 +1,3 @@
-CONDA_BUILD_SYSROOT:
-- /opt/MacOSX10.9.sdk
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
 VERBOSE_AT:
@@ -9,22 +7,25 @@ VERBOSE_CM:
 arpack:
 - '3.5'
 blas_impl:
-- openblas
 - mkl
+- openblas
 boost:
 - '1.65'
 bzip2:
 - '1.0'
 c_compiler:
-- clang
+- vs2008
 cairo:
 - '1.14'
 cpu_optimization_target:
 - nocona
+cross_compiler_target_platform:
+- win-32
+- win-64
 curl:
 - '7.54'
 cxx_compiler:
-- clangxx
+- vs2008
 dbus:
 - '1'
 expat:
@@ -36,7 +37,9 @@ flann:
 fontconfig:
 - '2.12'
 fortran_compiler:
-- gfortran
+- intel-fortran
+fortran_compiler_version:
+- 13.1.6
 freetype:
 - '2.8'
 geos:
@@ -64,7 +67,7 @@ icu:
 ignore_build_only_deps:
 - python
 ipython:
-- '6.1'
+- '5.4'
 jpeg:
 - '9'
 json_c:
@@ -126,7 +129,7 @@ netcdf_fortran:
 nettle:
 - '3.3'
 numpy:
-- '1.9'
+- '1.11'
 openblas:
 - 0.2.20
 openjpeg:
@@ -157,7 +160,7 @@ protobuf:
 pyqt:
 - '5.6'
 python:
-- '3.5'
+- '2.7'
 qt:
 - '5.6'
 r_base:
@@ -175,11 +178,10 @@ sqlite:
 sundials:
 - '2.7'
 target_platform:
-- osx-64
+- win-64
 tk:
 - '8.6'
 vc:
-- '14'
 - '9'
 vlfeat:
 - '0.9'
@@ -190,9 +192,13 @@ xz:
 zeromq:
 - '4.2'
 zip_keys:
-- - python
-  - ipython
 - - pyqt
   - qt
+- - python
+  - ipython
+  - vc
+  - c_compiler
+  - cxx_compiler
+  - fortran_compiler_version
 zlib:
 - '1.2'
