--- a/circle/python3.6/conda_build_config.yaml
+++ b/circle/python3.6/conda_build_config.yaml
@@ -7,25 +7,22 @@ VERBOSE_CM:
 arpack:
 - '3.5'
 blas_impl:
-- openblas
 - mkl
+- openblas
 boost:
 - '1.65'
 bzip2:
 - '1.0'
 c_compiler:
-- vs2008
+- gcc
 cairo:
 - '1.14'
 cpu_optimization_target:
 - nocona
-cross_compiler_target_platform:
-- win-32
-- win-64
 curl:
 - '7.54'
 cxx_compiler:
-- vs2008
+- gxx
 dbus:
 - '1'
 expat:
@@ -37,9 +34,7 @@ flann:
 fontconfig:
 - '2.12'
 fortran_compiler:
-- intel-fortran
-fortran_compiler_version:
-- 13.1.6
+- gfortran
 freetype:
 - '2.8'
 geos:
@@ -67,7 +62,7 @@ icu:
 ignore_build_only_deps:
 - python
 ipython:
-- '5.4'
+- '6.1'
 jpeg:
 - '9'
 json_c:
@@ -129,7 +124,7 @@ netcdf_fortran:
 nettle:
 - '3.3'
 numpy:
-- '1.11'
+- '1.9'
 openblas:
 - 0.2.20
 openjpeg:
@@ -160,7 +155,7 @@ protobuf:
 pyqt:
 - '5.6'
 python:
-- '2.7'
+- '3.6'
 qt:
 - '5.6'
 r_base:
@@ -178,10 +173,11 @@ sqlite:
 sundials:
 - '2.7'
 target_platform:
-- win-32
+- linux-64
 tk:
 - '8.6'
 vc:
+- '14'
 - '9'
 vlfeat:
 - '0.9'
@@ -192,13 +188,9 @@ xz:
 zeromq:
 - '4.2'
 zip_keys:
-- - python
-  - ipython
-  - vc
-  - c_compiler
-  - cxx_compiler
-  - fortran_compiler_version
 - - pyqt
   - qt
+- - python
+  - ipython
 zlib:
 - '1.2'
