--- a/travis/python3.5/conda_build_config.yaml
+++ b/travis/python3.5/conda_build_config.yaml
@@ -1,3 +1,5 @@
+CONDA_BUILD_SYSROOT:
+- /opt/MacOSX10.9.sdk
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
 VERBOSE_AT:
@@ -7,25 +9,22 @@ VERBOSE_CM:
 arpack:
 - '3.5'
 blas_impl:
-- openblas
 - mkl
+- openblas
 boost:
 - '1.65'
 bzip2:
 - '1.0'
 c_compiler:
-- vs2015
+- clang
 cairo:
 - '1.14'
 cpu_optimization_target:
 - nocona
-cross_compiler_target_platform:
-- win-32
-- win-64
 curl:
 - '7.54'
 cxx_compiler:
-- vs2015
+- clangxx
 dbus:
 - '1'
 expat:
@@ -37,9 +36,7 @@ flann:
 fontconfig:
 - '2.12'
 fortran_compiler:
-- intel-fortran
-fortran_compiler_version:
-- 16.0.4
+- gfortran
 freetype:
 - '2.8'
 geos:
@@ -129,7 +126,7 @@ netcdf_fortran:
 nettle:
 - '3.3'
 numpy:
-- '1.11'
+- '1.9'
 openblas:
 - 0.2.20
 openjpeg:
@@ -178,11 +175,12 @@ sqlite:
 sundials:
 - '2.7'
 target_platform:
-- win-64
+- osx-64
 tk:
 - '8.6'
 vc:
 - '14'
+- '9'
 vlfeat:
 - '0.9'
 xerces_c:
@@ -192,13 +190,9 @@ xz:
 zeromq:
 - '4.2'
 zip_keys:
-- - python
-  - ipython
-  - vc
-  - c_compiler
-  - cxx_compiler
-  - fortran_compiler_version
 - - pyqt
   - qt
+- - python
+  - ipython
 zlib:
 - '1.2'
