--- a/appveyor.yml
+++ b/appveyor.yml
@@ -56,7 +56,7 @@ install:
     - cmd: run_conda_forge_build_setup
 
     # testing purposes: get conda-build from defaults
-    - cmd: conda install -n root --quiet --yes -c defaults conda-build
+    - cmd: conda install -n root --quiet --yes -c msarahan conda-build
 
 # Skip .NET project specific build phase.
 build: off
